--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             <h2>
                 Eso es lo que hacen los héroes
             </h2>
-
+            <h2>
+                Eso es lo que hacen los héroes
+            </h2>
             <p>¡Bienvenido a "America's Ass", un sitio dedicado al Universo Cinematográfico de Marvel a lo relacionado con él! Aquí puede mantenerse actualizado sobre las próximas películas, novedades, ediciones y gifs de la franquicia.</p>
         </div>
     </section>
