--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
     <h2>Cómics más vendidos</h2>
     <div class="comics-grid">
       <figure>
-        <img src="img/portrait_uncanny%20(2).jpg" alt="X-Men Comic">
+        <img src="https://via.placeholder.com/200x300?text=X-Men+Comic" alt="X-Men Comic">
         <figcaption>X of Swords'! X-MEN #14</figcaption>
       </figure>
       <figure>
-        <img src="img/portrait_uncanny%20(3).jpg" alt="Avengers Comic">
+        <img src="https://via.placeholder.com/200x300?text=Avengers+Comic" alt="Avengers Comic">
         <figcaption>True Believers: Black Widow</figcaption>
       </figure>
       <figure>
-        <img src="img/portrait_uncanny%20(4).jpg" alt="Spider-Man Comic">
+        <img src="https://via.placeholder.com/200x300?text=Spider-Man+Comic" alt="Spider-Man Comic">
         <figcaption>Amazing Spider-Man Vol 1 #86</figcaption>
       </figure>
     </div>
@@ -149,3 +149,4 @@
 </body>
 
 </html>
+
